2016-09-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/index.rst: Update for 1.3.25 release.

	* version.sh: Update library versioning for 1.3.25 release.

	* NEWS.txt: Make sure is up to date.

	* Various fixes for minor issues noticed when compiling under
	Visual Studio.

2016-08-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/studio.h (MAGICK_CACHE_LINE_SIZE): Apply patch from
	Gentoo Linux to increase MAGICK_CACHE_LINE_SIZE to 128 when
	__powerpc__ is defined.

2016-08-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated with latest changes.

2016-08-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/rle.c (ReadRLEImage): Reject truncated/absurd Utah RLE
	files. Problem was reported by Agostino Sarubbo on August 19,
	2016.

2016-08-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Fix heap-based buffer read
	overflow.  TIFF sized attibutes were not being properly copied to
	a null-terminated string if the value was not null terminated.
	Problem was reported by Agostino Sarubbo on August 18, 2016.

2016-08-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lcms/src/cmstypes.c (Type_MLU_Read): "Added an extra check to
	MLU bounds", change based on github mm2/Little-CMS commit
	5ca71a7bc18b6897ab21d815d15e218e204581e2 and announced to the
	oss-security list by Ibrahim M. El-Sayed on Mon, 15 Aug 2016.

2016-08-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* webp: Updated bundled libwebp to release 0.5.1.

	* libxml: Updated bundled libxml2 to release 2.9.4.

	* lcms: Updated bundled lcms2 to release 2.8.

	* png: Update bundled libpng to release 1.6.24.

	* coders/jpeg.c (ReadJPEGImage): Log setting resolution and
	resolution units due to JFIF marker.

	* coders/sgi.c (SGIDecode): Fix integer overflow of size type in
	Win64 build where sizeof(long) < sizeof(size_t).

2016-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
