@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020160905"
-#define public MagickPackageReleaseDate "snapshot-20160905"
+#define public MagickPackageVersionAddendum ".020160906"
+#define public MagickPackageReleaseDate "snapshot-20160906"
