@@ -1,3 +1,8 @@
+2016-09-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/common.h (MAGICK_HAS_ATTRIBUTE): Coverity is allergic to
+	__has_attribute() so don't use it for Coverity builds.
+
 2016-09-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* www/index.rst: Update for 1.3.25 release.
